--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,5 +1,4 @@
 <div class="home">
-
 <nav class="navbar navbar-expand-lg navbar-light ">
   <!-- Container wrapper -->
   <div class="container-fluid">
@@ -44,14 +43,15 @@
     <!-- Right elements -->
     <div class="d-flex align-items-center">
       <!-- Icon -->
-      <button type="button" style="color: white" id="login">
+      <%# <button type="button" style="color: white" id="login">
           LOGIN
-        </button>
+        </button> %>
       <!-- Notifications -->
       <div class="dropdown">
-        <button type="button" id="btn" class="btn btn-primary me-3">
-          Sign up
-        </button>
+      <a href="/users/login">
+        <button type="button" id="btn"class="btn btn-primary me-3">
+          Sign In
+        </button></a>
         <ul
           class="dropdown-menu dropdown-menu-end"
           aria-labelledby="navbarDropdownMenuLink"
@@ -67,8 +67,8 @@
           </li>
         </ul>
       </div>
-      <!-- Avatar -->
-      <div class="dropdown">
+    <!-- Avatar -->
+     <div class="dropdown">
         <a
           class="dropdown-toggle d-flex align-items-center hidden-arrow"
           href="#"
@@ -77,7 +77,7 @@
           data-mdb-toggle="dropdown"
           aria-expanded="false"
         >
-          <img
+        <img
             src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp"
             class="rounded-circle"
             height="25"
@@ -111,7 +111,7 @@
 <div class="heading">
 <%= image_tag("pf.png", alt: "like" ,:align=>"middle") %>
 <h2>A FULLY ONLINE BASED ASSESSMENT APPLICATION <br>TO ASSEST YOURSELF</h2>
-<button type="button" class="btn btn-primary me-3" id="log" >GET STARTED</button>
+<button type="button" class="btn btn-primary me-3" id="log"  >GET STARTED</button>
 </div>
 </div>
 </div>
@@ -186,5 +186,10 @@
 </footer>
 
 </div>
+<script>
+if(session[:id]) {
+  document.getElementsByTagName("nav").style.display="none";
+}
+</script>
 
 
