--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -43,6 +43,7 @@
             .navbar-light .navbar-nav .nav-link {
                 color: white !important;
                 font-size: 20px;
+                font-weight: bold;
             }
             
             .btn {
@@ -174,5 +175,3 @@
             .container {
                 width: 1000px;
             }
-            
-            @media screen and (max-width: 600px) {}
