--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,153 +1,133 @@
-                    // // Place all the styles related to the users controller here.
-                    // // They will automatically be included in application.css.
-                    // // You can use Sass (SCSS) here: https://sass-lang.com/
-                    * {
-                        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-                    }
-                    
-                    // .form div {
-                    //     height: 200px;
-                    //     width: 200px;
-                    //     display: inline;
-                    //     background-color: #e7f2fb;
-                    // }
-                    // .name {
-                    //     background-color: #e7f2fb;
-                    //     display: inline;
-                    // }
-                    .form input {
-                        border-radius: 10px;
-                        width: 400px;
-                        border: none;
-                        background-color: rgb(242, 242, 242);
-                        height: 50px;
-                        margin-top: 10px;
-                    }
-                    
-                    // .form input:hover {
-                    //     border: #699eee;
-                    //     box-shadow: 10px -10px 15px rgba(70, 70, 70, 0.12);
-                    // }
-                    .form button {
-                        background-color: #ff574e;
-                        padding: 10px 10px;
-                        color: white;
-                        border: none;
-                        border-radius: 10px;
-                        margin-left: 5%;
-                        margin-top: 30px;
-                        font-size: 20px;
-                        width: 200px;
-                    }
-                    
-                    // .signUp div {
-                    //     display: inline;
-                    //     text-align: center;
-                    // }
-                    // #img {
-                    //     height: 600px;
-                    //     width: 600px;
-                    // }
-                    // .form {
-                    //     width: 800px;
-                    // }
-                    // .form form {
-                    //     margin-left: 60%;
-                    //     margin-top: -30%;
-                    //     height: 500px;
-                    //     padding: 30px 30px;
-                    //     border-radius: 10px;
-                    //     width: 800px;
-                    // }
-                    // #login-form form {
-                    //     margin-left: 60%;
-                    //     margin-top: -40%;
-                    //     height: 440px;
-                    //     width: 600px;
-                    //     padding: 30px 30px;
-                    //     border-radius: 10px;
-                    // }
-                    // .form form:hover {
-                    //     box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.5);
-                    // }
-                    .inline {
-                        max-width: 400px;
-                        margin: auto;
-                    }
-                    
-                    .input-icons svg {
-                        position: absolute;
-                    }
-                    
-                    .input-icons {
-                        width: 100%;
-                        margin-bottom: 10px;
-                    }
-                    
-                    .input-icons svg {
-                        padding: 10px;
-                        min-width: 50px;
-                        height: 25%;
-                        width: 20px;
-                        margin-top: -4.8%;
-                    }
-                    
-                    .input-icons svg path {
-                        fill: #ff574ea8;
-                    }
-                    
-                    // .input-icons .pwd {
-                    //     margin-left: 18%;
-                    // }
-                    .input-field {
-                        width: 300px;
-                        text-indent: 15%;
-                        margin-bottom: 3px;
-                    }
-                    
-                    //  ::placeholder {
-                    //     /* Chrome, Firefox, Opera, Safari 10.1+ */
-                    //     text-indent: 18%;
-                    //     /* Firefox */
-                    // }
-                    // #sign .log {
-                    //     margin-left: 60%;
-                    //     height: 350px;
-                    //     width: 440px;
-                    //     padding: 30px 30px;
-                    //     border-radius: 10px;
-                    //     background-color: #abcaf8;
-                    //     margin-top: 2%;
-                    // }
-                    // .show {
-                    //     display: block;
-                    // }
-                    // .login .img {
-                    //     margin-top: -10%;
-                    // }
-                    .signIn {
-                        display: inline-flex;
-                    }
-                    
-                    .img {
-                        height: 980px;
-                        width: 950px;
-                        margin-left: 100px;
-                        margin-right: 200px;
-                    }
-                    
-                    #login-form {
-                        margin-top: 18%;
-                        margin-left: 5%;
-                        text-align: center;
-                    }
-                    
-                    .column-1 {
-                        background-color: #ffe8e7;
-                    }
-                    
-                    .navbar-light .navbar-nav .nav-text {
-                        color: black !important;
-                        font-size: 20px;
-                        font-weight: bold;
-                    }
+                            // // // Place all the styles related to the users controller here.
+                            // // // They will automatically be included in application.css.
+                            // // // You can use Sass (SCSS) here: https://sass-lang.com/
+                            * {
+                                font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+                            }
+                            
+                            // .form-outline {
+                            //     margin: auto;
+                            //     margin-bottom: 10px;
+                            //     display: flex;
+                            //     flex-direction: row;
+                            // }
+                            // .form-outline svg path {
+                            //     fill: #e3e0df;
+                            // }
+                            // .form-outline input {
+                            //     width: 400px;
+                            //     margin-bottom: 3px;
+                            // }
+                            // .signIn {
+                            //     display: inline-flex;
+                            // }
+                            // .img {
+                            //     height: 980px;
+                            //     width: 950px;
+                            //     margin-left: 100px;
+                            //     margin-right: 200px;
+                            // }
+                            // #login-form {
+                            //     margin-top: 18%;
+                            //     margin-left: 5%;
+                            //     text-align: center;
+                            // }
+                            // .column-1 {
+                            //     background-color: #ffe8e7;
+                            //     // background-color: #535261;
+                            // }
+                            // .reg-bg {
+                            //     position: absolute;
+                            //     height: 100%;
+                            //     width: 100%;
+                            //     top: 0;
+                            //     left: 0;
+                            //     z-index: -10;
+                            //     // filter: brightness(10%);
+                            // }
+                            // .g-1 {
+                            //     display: block;
+                            //     margin-top: 40%;
+                            //     margin-left: -30%;
+                            // }
+                            // .form-control {
+                            //     // margin-left: 100px;
+                            //     // border-radius: 50px;
+                            //     height: 60px;
+                            //     font-size: 1.5rem;
+                            //     color: red;
+                            // }
+                            // .form-control:hover {
+                            //     border: 1px solid red;
+                            // }
+                            // svg {
+                            //     // margin-left: 350px;
+                            //     height: 25px;
+                            //     width: 25px;
+                            //     // margin-top: 10px;
+                            //     justify-content: center;
+                            // }
+                            // .svg-holder {
+                            //     display: flex;
+                            //     justify-content: center;
+                            //     align-items: center;
+                            //     padding: 0.33em 0.75em;
+                            // }
+                            // .content {
+                            //     height: 100px;
+                            //     color: white;
+                            //     margin-left: 30%;
+                            //     margin-top: 10%;
+                            //     width: 30%;
+                            // }
+                            // wid .form-control:focus+.form-label {
+                            //     top: -7px;
+                            //     left: 3px;
+                            //     z-index: 10;
+                            //     font-size: 14px;
+                            //     font-weight: 600;
+                            //     color: white;
+                            // }
+                            // .form-control:not(:placeholder-shown)+.form-label {
+                            //     top: -7px;
+                            //     left: 3px;
+                            //     z-index: 10;
+                            //     font-size: 14px;
+                            //     font-weight: 600;
+                            // }
+                            // .form-label {
+                            //     color: white;
+                            // }
+                            .reg-bg {
+                                position: absolute;
+                                height: 100%;
+                                width: 100%;
+                                top: 0;
+                                left: 0;
+                                z-index: -10;
+                                // filter: brightness(10%);
+                            }
+                            
+                            .control {
+                                width: 100%;
+                                height: 10%;
+                                border-radius: 5px;
+                                background-color: rgb(158, 152, 152);
+                                border: none;
+                            }
+                            
+                            h1,
+                            h2 {
+                                color: rgb(205, 199, 199);
+                            }
+                            
+                            // .one {
+                            //     margin-bottom: 0.5rem;
+                            //     color: rgb(197, 55, 55);
+                            //     background-color: white;
+                            // }
+                            .form {
+                                width: 20%;
+                                margin-top: 15%;
+                                margin-left: 5%;
+                            }
