--- a/app/views/quiz/_form.html.erb
+++ b/app/views/quiz/_form.html.erb
@@ -1,9 +1,33 @@
-<div id="quiz">
-<div contenteditable="true" class="question">Type question here</div>
-<div contenteditable="true"class="option-1"><input type="checkbox">Answer1</div>
-<div contenteditable="true"class="option-2"><input type="checkbox">Answer2</div>
-<div contenteditable="true"class="option-3"><input type="checkbox">Answer3</div>
-<div contenteditable="true"class="option-4"><input type="checkbox">Answer4</div><br>
-<div id="add"></div>
-<button id="btn"><a href='/home/load'>Add</a></button>
-</div><br>
+<div>
+<h1>HTml</h1>
+
+<%# <form action="/question" method="post" >
+<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+<%# <div class = "question">
+ <input type="text" name="question" class="qtn">
+</div>
+<div class="row1">
+<div class="opt1">
+<input type="radio" id="html" name="option" value="a">
+<input type="text" name="option1" required>
+</div>
+<div class="opt2" >
+<input type="radio" id="html" name="option" value="b">
+<input type="text" name="option2" required>
+</div>
+</div>
+<div class="row2">
+<div class="opt3">
+<input type="radio" id="html" name="option" value="c">
+<input type="text" name="option3" required>
+</div>
+<div class="opt4">
+<input type="radio" id="html" name="option" value="d">
+<input type="text" name="option4"required>
+</div>
+<button type="submit" id="btn" name="button" value="Add">Add</button>
+</form> %>
+<% if flash[:error]%>
+<p><%= flash[:error]%></p>
+<%end%><br>
+</div>
