--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -1,3 +1,120 @@
 // Place all the styles related to the Session controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.register_form {
+    color: white !important;
+    font-weight: bold !important;
+    font-size: 50px;
+    margin-bottom: 50px;
+}
+
+.register_form p {
+    color: white !important;
+    font-size: 30px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.form-input {
+    position: relative;
+}
+
+.form-input input {
+    width: 25%;
+    height: 45px;
+    padding-left: 40px;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    box-shadow: none;
+    border: 1px solid #00000020;
+    border-radius: 40px;
+    outline: none;
+    background: #ffffff;
+}
+
+.form-input span {
+    position: absolute;
+    top: 10px;
+    padding-left: 15px;
+    color: #0c0101a1;
+}
+
+.form-input input::placeholder {
+    color: black;
+    padding-left: 0px;
+}
+
+.form-input input:focus,
+.form-input input:valid {
+    border: 2px solid black;
+}
+
+.form-input input:focus::placeholder {
+    color: white;
+}
+
+.form-input input:focus::placeholder {
+    color: white;
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+    background-color: #1A8367 !important;
+    border: 0px;
+}
+
+.form-box button[type="submit"] {
+    margin-top: 10px;
+    border: none;
+    cursor: pointer;
+    border-radius: 50px;
+    background: #ff574e;
+    color: #fff;
+    font-size: 90%;
+    font-weight: bold;
+    letter-spacing: .1rem;
+    transition: 0.5s;
+    padding: 12px;
+    width: 25%;
+}
+
+.form-box button[type="submit"]:hover {
+    background: #ff574e;
+}
+
+.custom-control-label {
+    color: white;
+    font-weight: bold;
+}
+
+.index {
+    margin-left: 200px;
+    margin-top: 200px;
+}
+
+.register_side {
+    margin-left: 600px;
+    margin-top: -850px;
+    width: 1048px;
+    height: 1027px;
+}
+
+.sign_up {
+    border: none;
+    outline: none;
+    margin-left: 30px;
+    height: 50px;
+    width: 183px;
+    margin-bottom: 50px;
+}
+
+.sign_in {
+    border: none;
+    outline: none;
+    // margin-left: 30px;
+    height: 50px;
+    width: 183px;
+    margin-bottom: 50px;
+}
+
+.index button:hover {
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
