--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,25 +1,25 @@
 <%= render partial: "header"%>
 <div class="contact">
 <div class="contact_heading">
-Love to hear from you , <br> Get in touch
+ <br> Get in touch
 </div>
 <div class="review">
 <div class="contact_form">
     <form class="inline">
         <div class="input-icons">
             <i class="fa fa-user icon"></i>
-            <input class="input-field" type="text"><br>
+            <input class="input-field" type="text" placeholder="name"><br>
             <i class="fa fa-envelope icon"></i>
-            <input class="input-field" type="text"><br>
+            <input class="input-field" type="email" placeholder="abc1@fwsa.in"><br>
             <i class="fa fa-messages icon" style="color:white"></i>
             <%# <i class="fa-solid fa-messages" style="color:red"></i> %>
-            <input class="input-field" type="text"><br>
+            <textarea class="input-field" type="text" style="height: 200px; width: 400px" placeholder="Type message here . . ."></textarea><br>
         </div>
   </form>
 </div>
 <div class="review">
-  <%= image_tag("calling.png", alt: "like" , id:"call") %>
-  <%= image_tag("receiving.png", alt: "like", id: "receive") %>
+  <%= image_tag("call_and_receive.png", alt: "like" , id:"call" , height: "500" ) %>
+
 </div>
 </div>
 
