--- a/app/views/quiz/_list.html.erb
+++ b/app/views/quiz/_list.html.erb
@@ -1,34 +1,36 @@
-<%# <form action="/question" method="post" > %>
-    <%Puzzle.all.each do |t|%>
-    <%# <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>
-        <div class="question" contentEditable="true">
-            <%# <input type="text" name="question" class="qtn"> %>
-            <%= t.question%>
-        </div>
-        <div class="list-row1">
-            <div class="opt1" contentEditable="true">
-                <input type="radio" id="html" name="option" value="a" style="position:sticky">
-                <%# <input type="text" name="option1" required> %>
-                <%= t.option1%>
-            </div>
-            <div class="opt2" contentEditable="true">
-                <input type="radio" id="html" name="option" value="b" style="position:sticky">
-                <%# <input type="text" name="option2" required> %>
-                 <%= t.option2%>
-            </div>
-        </div>
-        <div class="list-row2">
-            <div class="opt3" contentEditable="true">
-                <input type="radio" id="html" name="option" value="c" style="position:sticky">
-                <%# <input type="text" name="option3" required> %>
-                 <%= t.option3%>
-            </div>
-            <div class="opt4" contentEditable="true">
-                <input type="radio" id="html" name="option" value="d" style="position:sticky">
-                 <%= t.option4%>
-                <%# <input type="text" name="option4"required> %>
-            </div>
-        </div>
-            <button type="submit" id="btn" name="button" value="Add">Add</button>
-            <%end%>
-            <%# </form> %>
+<%Puzzle.all.each do |t|%>
+<div class="create_game">
+<form action="/question" method="post" >
+<a href="/update"><button>Edit</button></a>
+<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+
+<div class = "question">
+ <input type="text" name="question" value = "<%= t.question%>"class="qtn">
+</div>
+<div class="row1">
+<div class="opt1">
+<input type="radio"name="option" value="a">
+<input type="text" name="option1"value = "<%= t.option1%>" required>
+</div>
+<div class="opt2" >
+<input type="radio" name="option"  value="b">
+<input type="text" name="option2" value = "<%= t.option2%>" required>
+</div>
+</div>
+<div class="row2">
+<div class="opt3">
+<input type="radio"  name="option" value="c">
+<input type="text" name="option3" value = "<%= t.option3%>" required>
+</div>
+<div class="opt4">
+<input type="radio"  name="option" value="d">
+<input type="text" name="option4" value = "<%= t.option4%>" required>
+</div>
+</div>
+</form>
+</div>
+<%end%>
+<% if flash[:error]%>
+<p><%= flash[:error]%></p>
+<%end%>
+<br>
