--- a/app/views/quiz/creategame.html.erb
+++ b/app/views/quiz/creategame.html.erb
@@ -1,34 +1,37 @@
-<%= render partial:"list"%>
-<div>
+ <%= render partial:"list"%>
+<%# <%= render partial:"form"%>
+<div class="create_game">
 <form action="/question" method="post" >
 <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+
 <div class = "question">
  <input type="text" name="question" class="qtn">
 </div>
 <div class="row1">
-<div class="opt1">
+<div class="opt1 option">
 <input type="radio" id="html" name="option" value="a">
-<input type="text" name="option1" required>
+<input type="text" name="option1"required>
 </div>
-<div class="opt2" >
-<input type="radio" id="html" name="option" value="b">
+<div class="opt2 option" >
+<input type="radio" id="html" name="option"  value="b">
 <input type="text" name="option2" required>
 </div>
 </div>
 <div class="row2">
-<div class="opt3">
+<div class="opt3 option">
 <input type="radio" id="html" name="option" value="c">
-<input type="text" name="option3" required>
+<input type="text" name="option3"  required>
 </div>
-<div class="opt4">
+<div class="opt4 option">
 <input type="radio" id="html" name="option" value="d">
-<input type="text" name="option4"required>
-</div>
+<input type="text" name="option4" required>
+</div><br>
 <button type="submit" id="btn" name="button" value="Add">Add</button>
-</form><br>
+</form>
+</div>
 <% if flash[:error]%>
 <p><%= flash[:error]%></p>
-<%end%><br>
+<%end%>
 </div>
 
 <%Puzzle.last do |t| %>
