--- a/app/views/quiz/creategame.html.erb
+++ b/app/views/quiz/creategame.html.erb
@@ -1,7 +1,30 @@
- <%= render partial:"list"%>
+<%# <%= render partial:"list"%>
 <%# <%= render partial:"form"%>
-<div class="create_game">
-<form action="/question" method="post" >
+<div class= "quiz">
+<div class="overflow col">
+<br>
+<%# <% Puzzle.all.each do |t|%>
+<%# <%case t.button%>
+<%# <%when "quiz"%>
+<%# <%=image_tag( "1.png", alt: "like" ,class:"question_image") %><br>
+<%# <% when "tf"%>
+<%# <%=image_tag( "2.png", alt: "like" ,class:"question_image") %><br>
+<%# <% when "fillup"%>
+<%# <%=image_tag( "3.png", alt: "like" ,class:"question_image") %><br>
+<%# <%end%>
+<%# <%end%>
+
+ <select name="button">
+    <option value="">Select your question</option>
+    <option value="quiz">Quiz</option>
+    <option value="tf">True or false</option>
+    <option value="fillup">Fill up</option>
+    <%# <option value="audi">Audi</option> %>
+</select>
+ </div><br>
+<div class="create_game col">
+
+<form action="/question" method="post" id="main-form" >
 <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
 <div class = "question">
@@ -25,20 +48,79 @@
 <div class="opt4 option">
 <input type="radio" id="html" name="option" value="d">
 <input type="text" name="option4" required>
-</div><br>
-<button type="submit" id="btn" name="button" value="Add">Add</button>
+</div>
+</div>
+ <p id="message"></p>
+<select name="button" id="koq">
+      <option value="">Select your question</option>
+    <option value="quiz">Quiz</option>
+    <option value="tf">True or false</option>
+    <option value="fillup">Fill up</option>
+    <%# <option value="audi">Audi</option> %>
+  </select>
+
+<button type="submit" id="add" value="Add">Add</button>
 </form>
+
+
 </div>
 <% if flash[:error]%>
 <p><%= flash[:error]%></p>
 <%end%>
-</div>
 
+</div>
 <%Puzzle.last do |t| %>
    <%if t.button =="Add" %>
   <%= render partial:"form"%>
    <%end%>
 <%end%>
+<script>
+
+    // jQuery(function($) {
+    //   $("#main-form").autosave({
+    //     callbacks: {
+    //       trigger: ["change", function() {
+    //         var self = this;
+
+    //         $("[name=save]").click(function() {
+    //           self.save();
+    //         });
+    //       }],
+    //       save: {
+    //         method: "post",
+    //         url: "/question"
+    //         options: {
+    //           success: function() {
+    //             alert("saved!");
+    //           }
+    //         }
+    //       }
+    //     }
+    //   });
+    // });
+  jQuery(document).ready(function($){
+
+    $("#main-form").autosave({
+			url: "/question",//set the php file that updates the database
+			method: "post",
+			grouped: true,//send data for all fields with the autosave
+    		       success: function(data) {//on a successful update...
+        		$("#message").html("Data updated successfully").show();//...show a message...
+				setTimeout('fadeMessage()',1500);//...and then fade it out after an interval
+    		},
+			send: function(){//on a save...
+        		$("#message").html("Sending data....");//..show a message
+			},
+    		dataType: "html"
+		});
+
+       function fadeMessage(){
+		$('#message').fadeOut('slow');//just a function to fade out the message
+	}
+  })
+
+
+</script>
 
 
 
