--- a/app/assets/stylesheets/quiz.scss
+++ b/app/assets/stylesheets/quiz.scss
@@ -1,3 +1,142 @@
-// Place all the styles related to the quiz controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+            // Place all the styles related to the quiz controller here.
+            // They will automatically be included in application.css.
+            // You can use Sass (SCSS) here: https://sass-lang.com/
+            .vertical {
+                border-left: 6px solid #f1eac2;
+                height: 69%;
+                position: absolute;
+                left: 50%;
+                top: 9%;
+            }
+            
+            .game {
+                margin-left: 10%;
+                margin-top: 50px;
+                display: flex;
+                background: url('green_board');
+                background-repeat: no-repeat;
+                background-size: 100% 100%;
+                height: 750px;
+                width: 1500px;
+            }
+            
+            #answer {
+                // left: 100%;
+                margin-left: 20%;
+                margin-top: 5%;
+            }
+            
+            input[type='radio'] {
+                -webkit-appearance: none;
+                width: 20px;
+                height: 20px;
+                border: 1px solid#f1eac2;
+                border-radius: 50%;
+                outline: none;
+                box-shadow: 0 0 5px 0px #f1eac2;
+            }
+            
+            input[type='radio']:hover {
+                box-shadow: 0 0 5px 0px#f1eac2;
+            }
+            
+            input[type='radio']:before {
+                content: '';
+                display: block;
+                width: 60%;
+                height: 60%;
+                margin: 20% auto;
+                border-radius: 50%;
+            }
+            
+            input[type='radio']:checked:before {
+                background-color: #f1eac2;
+                border: 2px solid#f1eac2;
+                accent-color: #f1eac2;
+            }
+            
+            #answer input[type="text"] {
+                background-color: transparent;
+                border: none;
+                height: 50px;
+                width: 400px;
+                margin-left: 10px;
+                border-radius: 20px;
+                text-indent: 10px;
+                color: #f1eac2;
+                font-weight: bold;
+                font-size: 25px;
+            }
+            
+            #question textarea {
+                background-color: transparent;
+                border: none;
+                height: 200px;
+                width: 600px;
+                margin-left: 15%;
+                border-radius: 20px;
+                text-indent: 10px;
+                margin-top: 15%;
+                font-size: 35px;
+                font-weight: bold;
+                color: #f1eac2;
+            }
+            
+            .game input:focus {
+                outline: none !important;
+            }
+            
+            .game textarea:focus {
+                outline: none !important;
+            }
+            
+            .game ::placeholder {
+                color: #f1eac2;
+            }
+            
+            #answer #save {
+                padding: 10px 10px;
+                width: 100px;
+                background: transparent;
+                color: #f1eac2;
+                font-weight: bold;
+                border-radius: 20px;
+                margin-left: 80%;
+                margin-top: 50%;
+            }
+            
+            #answer #save:hover {
+                background-color: #f1eac2;
+                color: #2c4c3c
+            }
+            
+            .overflow {
+                overflow-x: auto;
+                overflow-y: hidden;
+                margin: 4px, 4px;
+                padding: 4px;
+                width: 300px;
+                top: 1000px;
+                display: inline;
+                background-color: white !important;
+            }
+            
+            .overflow a {
+                color: white;
+            }
+            
+            #add_question {
+                padding: 10px 10px;
+                width: 200px;
+                background: transparent;
+                color: #2c4c3c;
+                font-weight: bold;
+                border-radius: 20px;
+                background-color: #2c4c3c;
+                color: #f1eac2;
+            }
+            
+            #add_question:hover {
+                background-color: #2c4c3c;
+                color: #f1eac2;
+            }
