--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -1,6 +1,10 @@
 // Place all the styles related to the Session controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+body {
+    width: 100%;
+}
+
 .register_form {
     color: white !important;
     font-weight: bold !important;
@@ -19,7 +23,7 @@
 }
 
 .form-input input {
-    width: 25%;
+    width: 100%;
     height: 45px;
     padding-left: 40px;
     margin-bottom: 20px;
@@ -73,7 +77,7 @@
     letter-spacing: .1rem;
     transition: 0.5s;
     padding: 12px;
-    width: 25%;
+    // width: 25%;
 }
 
 .form-box button[type="submit"]:hover {
@@ -85,11 +89,6 @@
     font-weight: bold;
 }
 
-.index {
-    margin-left: 200px;
-    margin-top: 200px;
-}
-
 .register_side {
     margin-left: 600px;
     margin-top: -850px;
@@ -99,22 +98,102 @@
 
 .sign_up {
     border: none;
-    outline: none;
-    margin-left: 30px;
+    // top: 0;
+    // position: absolute;
+    // margin-left: 30px;
     height: 50px;
-    width: 183px;
-    margin-bottom: 50px;
+    width: 182px;
+    // margin-bottom: 50px;
+    background-color: white;
+}
+
+.signup {
+    background-color: white;
+    padding: 30px 20px;
+    position: relative;
+    height: 500px;
 }
 
 .sign_in {
     border: none;
     outline: none;
+    // top: 10%;
+    // position: absolute;
     // margin-left: 30px;
     height: 50px;
-    width: 183px;
-    margin-bottom: 50px;
+    width: 182px;
+    // margin-bottom: 50px;
+    background-color: white;
+}
+
+.signin {
+    background-color: white;
+    padding: 30px 20px;
+    position: relative;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .index button:hover {
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
+
+.whole {
+    // display: none;
+    display: flex;
+    flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
+    background-color: white;
+    height: 90vh;
+    // width: 400px;
+    padding: 20px;
+    border: 2px solid red;
+    position: absolute;
+    right: 0;
+    top: 10%;
+    // margin-right: 10%;
+    // text-replace: all ease-in-out 0.5s;
+}
+
+.container {
+    top: 0;
+    right: 0;
+    position: absolute;
+    margin: 0;
+    display: flex;
+    padding: 0 !important;
+    // justify-content: center;
+    // align-items: center;
+    height: 100vh;
+    // width: auto;
+    // background-color: white;
+}
+
+.custom-control-label {
+    color: black;
+}
+
+.btn-holder {
+    display: flex;
+    top: 0;
+    position: relative;
+    padding: 0px 2px;
+}
+
+.user-register {
+    display: none;
+    // background-color: black;
+    height: 100vh;
+    width: 100%;
+    padding: 20px;
+    position: absolute;
+}
+
+// .pop-left {
+//     // right: -100%;
+//     display: none;
+//     transition: all ease-in-out 0.5s;
+// }
