--- a/app/views/quiz/_form.html.erb
+++ b/app/views/quiz/_form.html.erb
@@ -1,30 +1,30 @@
-<div class="create_game">
-<form action="/question" method="post" >
-<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-<div class = "question">
- <input type="text" name="question" class="qtn">
+<div class="game">
+<div id="question">
+<form action="/question" method="post" id="main-form" >
+ <input type="hidden" name="authenticity_token" value=" form_authenticity_token ">
+ <textarea placeholder="Start typing your question" name="question" ></textarea>
 </div>
-<div class="row1">
-<div class="opt1">
-<input type="radio" id="html" name="option" value="a">
-<input type="text" name="option1" required>
-</div>
-<div class="opt2" >
-<input type="radio" id="html" name="option" value="b">
-<input type="text" name="option2" required>
-</div>
-</div>
-<div class="row2">
-<div class="opt3">
+<div class="vertical"></div>
+<div id="answer">
+<div class="opt1 opt">
+<input type="radio" id="html" name="option" placeholder="Add answer" value="a">
+<input type="text" name="option1" placeholder="Add answer 1"required>
+</div><br>
+<div class="opt2 opt">
+<input type="radio" id="html" name="option"  value="b">
+<input type="text" name="option2" placeholder="Add answer 2"required>
+</div><br>
+<div class="opt3 opt">
 <input type="radio" id="html" name="option" value="c">
-<input type="text" name="option3" required>
-</div>
-<div class="opt4">
+<input type="text" name="option3" placeholder="Add answer 3" required>
+</div><br>
+<div class="opt4 opt">
 <input type="radio" id="html" name="option" value="d">
-<input type="text" name="option4"required>
-</div>
-<button type="submit" id="btn" name="button" value="Add">Add</button>
+<input type="text" name="option4"placeholder="Add answer 4" required>
+</div><br>
+<button type="submit" id="save" value="Add">Save</button>
 </form>
+</div>
 <% if flash[:error]%>
 <p><%= flash[:error]%></p>
 <%end%><br>
